--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^7.1.4",
     "@react-navigation/native-stack": "^7.3.8",
     "react": "19.0.0",
