--- a/package.json
+++ b/package.json
@@ -19,14 +19,22 @@
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
     "@react-navigation/native": "^7.1.4",
     "@react-navigation/native-stack": "^7.3.8",
+    "@types/xlsx": "^0.0.36",
     "react": "19.0.0",
     "react-native": "0.78.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-html": "^0.1.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-reanimated": "^3.17.2",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-share": "^12.0.9",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.11.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -41,6 +49,7 @@
     "@react-native/typescript-config": "0.78.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
