--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.5.6",
+    "@react-native-documents/picker": "^10.1.3",
     "@react-native-picker/picker": "^2.11.0",
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
